--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -1,1 +1,22 @@
-<p>crud-recipe works!!!</p>
+<div class="card">
+  <div class="card-header">
+    <div class="row">
+      <div class="col-md-6 border">
+        Left card header
+      </div>
+      <div class="col-md-6 border">
+        right card header
+      </div>
+    </div>
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-6 border">
+        Left card body
+      </div>
+      <div class="col-md-6 border">
+        right card body
+      </div>
+    </div>
+  </div>
+</div>
