--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -7,6 +7,10 @@
           Cancel
         </button>
 
+        <button type="button" class="me-2" mat-stroked-button color="primary" (click)="createRecipe()">
+          Create
+        </button>
+
       </div>
       <div class="col-md-6 border">
         right card header
