--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -18,13 +18,20 @@
     </div>
   </div>
   <div class="card-body">
-    <div class="row">
-      <div class="col-md-6 border">
-        Left card body
+
+    <form action="">
+
+      <div class="row">
+        <div class="col-md-6 border">
+          Left card body
+        </div>
+        <div class="col-md-6 border">
+          right card body
+        </div>
       </div>
-      <div class="col-md-6 border">
-        right card body
-      </div>
-    </div>
+
+
+    </form>
+
   </div>
 </div>
