--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -19,7 +19,7 @@
   </div>
   <div class="card-body">
 
-    <form action="">
+    <form [formGroup]="recipeFormGroup">
 
       <div class="row">
         <div class="col-md-6 border">
