--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -23,7 +23,12 @@
 
       <div class="row">
         <div class="col-md-6 border">
-          Left card body
+
+          <mat-form-field class="w-100" appearance="outline">
+            <mat-label>Name</mat-label>
+            <input matInput formControlName="name" placeholder="Enter recipe name">
+          </mat-form-field>
+
         </div>
         <div class="col-md-6 border">
           right card body
