--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -29,6 +29,11 @@
             <input matInput formControlName="name" placeholder="Enter recipe name">
           </mat-form-field>
 
+          <mat-form-field class="w-100" appearance="outline">
+            <mat-label>Description</mat-label>
+            <textarea matInput formControlName="description" placeholder="Enter recipe description"></textarea>
+          </mat-form-field>
+
         </div>
         <div class="col-md-6 border">
           right card body
