--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header">
     <div class="row">
-      <div class="col-md-6 border">
+      <div class="col-md-6 ">
 
         <button type="button" class="me-2" mat-stroked-button color="warn" (click)="cancel()">
           Cancel
@@ -12,8 +12,8 @@
         </button>
 
       </div>
-      <div class="col-md-6 border">
-        right card header
+      <div class="col-md-6 ">
+        <!-- right card header -->
       </div>
     </div>
   </div>
@@ -22,7 +22,7 @@
     <form [formGroup]="recipeFormGroup">
 
       <div class="row">
-        <div class="col-md-6 border">
+        <div class="col-md-6 ">
 
           <mat-form-field class="w-100" appearance="outline">
             <mat-label>Name</mat-label>
@@ -35,8 +35,8 @@
           </mat-form-field>
 
         </div>
-        <div class="col-md-6 border">
-          right card body
+        <div class="col-md-6 ">
+          <!-- right card body -->
         </div>
       </div>
 
