--- a/Wasfat/admin.angular/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,12 +1,17 @@
 <div class="card">
     <div class="card-header">
         <div class="row">
-            <div class="col-md-6 border">
-                Left card header
+            <div class="col-md-6">
+                <!-- Left card header -->
             </div>
-            <div class="col-md-6 border">
-                right card header
+
+            <div class="col-md-6 text-end">
+                <!-- right card header -->
+                <button type="button" mat-stroked-button color="primary" (click)="newRecipe()">
+                    New Recipe
+                </button>
             </div>
+
         </div>
     </div>
     <div class="card-body">
