--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -1,8 +1,7 @@
 <div class="card">
   <div class="card-header">
     <div class="row">
-      <div class="col-md-6 ">
-
+      <div class="col-md-6">
         <button type="button" class="me-2" mat-stroked-button color="warn" (click)="cancel()">
           Cancel
         </button>
@@ -10,20 +9,15 @@
         <button type="button" mat-stroked-button color="primary" (click)="saveRecipe()">
           {{ isEditMode ? 'Update' : 'Create' }}
         </button>
-
       </div>
-      <div class="col-md-6 ">
-        <!-- right card header -->
-      </div>
+      <div class="col-md-6"></div>
     </div>
   </div>
+
   <div class="card-body">
-
     <form [formGroup]="recipeFormGroup">
-
       <div class="row">
-        <div class="col-md-6 ">
-
+        <div class="col-md-6">
           <mat-form-field class="w-100" appearance="outline">
             <mat-label>Name</mat-label>
             <input matInput formControlName="name" placeholder="Enter recipe name">
@@ -33,15 +27,31 @@
             <mat-label>Description</mat-label>
             <textarea matInput formControlName="description" placeholder="Enter recipe description"></textarea>
           </mat-form-field>
-
         </div>
-        <div class="col-md-6 ">
-          <!-- right card body -->
-        </div>
+        <div class="col-md-6"></div>
       </div>
-
-
     </form>
 
+    <hr class="my-4">
+
+    <div>
+      <h3>Instructions</h3>
+      <p class="text-muted">Add step-by-step instructions for this recipe.</p>
+
+      <button mat-stroked-button color="accent" (click)="addInstruction()">
+        + Add Instruction
+      </button>
+
+      <div *ngFor="let instruction of instructions; let i = index" class="mt-3">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Instruction {{ instruction.order }}</mat-label>
+          <input matInput [(ngModel)]="instruction.text" placeholder="Enter instruction details">
+        </mat-form-field>
+
+        <button mat-icon-button color="warn" (click)="removeInstruction(i)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
+    </div>
   </div>
 </div>
