--- a/Wasfat/admin.angular/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/recipes-list/recipes-list.component.html
@@ -29,6 +29,14 @@
                     </ng-template>
                 </ngx-datatable-column>
 
+                <ngx-datatable-column [name]="'Instructions'">
+                    <ng-template let-row="row" ngx-datatable-cell-template>
+                        <button mat-stroked-button color="accent" (click)="viewInstructions(row.id)">
+                            Instructions
+                        </button>
+                    </ng-template>
+                </ngx-datatable-column>
+
             </ngx-datatable>
         </div>
     </div>
