working instruction list and crud that needs fine tuning

--- a/Wasfat/admin.angular/src/app/instructions/instructions-list/instructions-list.component.html
+++ b/Wasfat/admin.angular/src/app/instructions/instructions-list/instructions-list.component.html
@@ -17,7 +17,7 @@
   <div class="card-body">
     <div class="row">
       <ngx-datatable [rows]="instructions" default>
-        <ngx-datatable-column [name]="'Number'" prop="id"></ngx-datatable-column>
+        <ngx-datatable-column [name]="'Number'" prop="order"></ngx-datatable-column>
         <ngx-datatable-column [name]="'Text'" prop="text"></ngx-datatable-column>
 
         <ngx-datatable-column [name]="'Edit'">
