--- a/Wasfat/admin.angular/src/app/instructions/crud-instruction/crud-instruction.component.html
+++ b/Wasfat/admin.angular/src/app/instructions/crud-instruction/crud-instruction.component.html
@@ -1,54 +1,35 @@
 <div class="card">
   <div class="card-header">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 border">
         <button type="button" class="me-2" mat-stroked-button color="warn" (click)="cancel()">
           Cancel
         </button>
 
         <button type="button" mat-stroked-button color="primary" (click)="saveInstruction()">
-          {{ isEditMode ? 'Update' : 'Create' }}
+          {{ isEditMode ? 'Save' : 'Create' }}
         </button>
       </div>
-      <div class="col-md-6"></div>
+      <div class="col-md-6 border">
+        <!-- right card header -->
+      </div>
     </div>
   </div>
-
   <div class="card-body">
     <form [formGroup]="instructionFormGroup">
       <div class="row">
-        <div class="col-md-6">
-          <mat-form-field class="w-50" appearance="outline">
+        <div class="col-md-12">
+          <mat-form-field class="w-25 me-2" appearance="outline">
             <mat-label>Recipe Id</mat-label>
             <input matInput formControlName="recipeId" placeholder="Enter instruction recipe" readonly>
-            <mat-error *ngIf="instructionFormGroup.get('recipeId').hasError('required')">
-              Recipe Id is required
-            </mat-error>
-            <mat-error *ngIf="instructionFormGroup.get('recipeId').hasError('min')">
-              Recipe Id must be at least 1
-            </mat-error>
           </mat-form-field>
-          <mat-form-field class="w-50" appearance="outline">
+          <mat-form-field class="w-25 me-2" appearance="outline">
             <mat-label>Instruction Order</mat-label>
             <input matInput formControlName="order" placeholder="Enter instruction order">
-            <mat-error *ngIf="instructionFormGroup.get('order').hasError('required')">
-              Instruction order is required
-            </mat-error>
-            <mat-error *ngIf="instructionFormGroup.get('order').hasError('min')">
-              Instruction order must be at least 1
-            </mat-error>
           </mat-form-field>
-        </div>
-        <div class="col-md-6">
-          <mat-form-field class="w-100" appearance="outline">
+          <mat-form-field class="w-100 textarea-height" appearance="outline">
             <mat-label>Instruction Text</mat-label>
-            <input matInput formControlName="text" placeholder="Enter instruction text">
-            <mat-error *ngIf="instructionFormGroup.get('text').hasError('required')">
-              Instruction text is required
-            </mat-error>
-            <mat-error *ngIf="instructionFormGroup.get('text').hasError('minlength')">
-              Instruction text must be at least 3 characters long
-            </mat-error>
+            <textarea matInput formControlName="text" placeholder="Enter instruction text" class=""></textarea>
           </mat-form-field>
         </div>
       </div>
