--- a/Wasfat/admin.angular/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/recipes-list/recipes-list.component.html
@@ -31,7 +31,7 @@
 
                 <ngx-datatable-column [name]="'Instructions'">
                     <ng-template let-row="row" ngx-datatable-cell-template>
-                        <button mat-stroked-button color="accent" (click)="viewInstructions(row.id)">
+                        <button mat-stroked-button color="primary" (click)="viewInstructions(row.id)">
                             Instructions
                         </button>
                     </ng-template>
