--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -1,7 +1,8 @@
 <div class="card">
   <div class="card-header">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 ">
+
         <button type="button" class="me-2" mat-stroked-button color="warn" (click)="cancel()">
           Cancel
         </button>
@@ -9,15 +10,20 @@
         <button type="button" mat-stroked-button color="primary" (click)="saveRecipe()">
           {{ isEditMode ? 'Update' : 'Create' }}
         </button>
+
       </div>
-      <div class="col-md-6"></div>
+      <div class="col-md-6 ">
+        <!-- right card header -->
+      </div>
     </div>
   </div>
-
   <div class="card-body">
+
     <form [formGroup]="recipeFormGroup">
+
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 ">
+
           <mat-form-field class="w-100" appearance="outline">
             <mat-label>Name</mat-label>
             <input matInput formControlName="name" placeholder="Enter recipe name">
@@ -27,9 +33,15 @@
             <mat-label>Description</mat-label>
             <textarea matInput formControlName="description" placeholder="Enter recipe description"></textarea>
           </mat-form-field>
+
         </div>
-        <div class="col-md-6"></div>
+        <div class="col-md-6 ">
+          <!-- right card body -->
+        </div>
       </div>
+
+
     </form>
+
   </div>
 </div>
