--- a/Wasfat/admin.angular/src/app/instructions/crud-instruction/crud-instruction.component.html
+++ b/Wasfat/admin.angular/src/app/instructions/crud-instruction/crud-instruction.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header">
     <div class="row">
-      <div class="col-md-6 border">
+      <div class="col-md-6">
         <button type="button" class="me-2" mat-stroked-button color="warn" (click)="cancel()">
           Cancel
         </button>
@@ -10,26 +10,32 @@
           {{ isEditMode ? 'Save' : 'Create' }}
         </button>
       </div>
-      <div class="col-md-6 border">
+      <div class="col-md-6">
         <!-- right card header -->
       </div>
     </div>
   </div>
   <div class="card-body">
     <form [formGroup]="instructionFormGroup">
-      <div class="row">
-        <div class="col-md-12">
-          <mat-form-field class="w-25 me-2" appearance="outline">
+      <div class="row g-2">
+        <div class="col-md-6">
+          <mat-form-field class="w-100" appearance="outline">
             <mat-label>Recipe Id</mat-label>
             <input matInput formControlName="recipeId" placeholder="Enter instruction recipe" readonly>
           </mat-form-field>
-          <mat-form-field class="w-25 me-2" appearance="outline">
+        </div>
+        <div class="col-md-6">
+          <mat-form-field class="w-100" appearance="outline">
             <mat-label>Instruction Order</mat-label>
             <input matInput formControlName="order" placeholder="Enter instruction order">
           </mat-form-field>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
           <mat-form-field class="w-100 textarea-height" appearance="outline">
             <mat-label>Instruction Text</mat-label>
-            <textarea matInput formControlName="text" placeholder="Enter instruction text" class=""></textarea>
+            <textarea matInput formControlName="text" placeholder="Enter instruction text"></textarea>
           </mat-form-field>
         </div>
       </div>
