--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -1,101 +1,31 @@
-<div class="card">
-  <div class="card-header">
-    <div class="row">
-      <div class="col-md-6 ">
+<form [formGroup]="formGroup">
+  <h3>{{ isEditMode ? 'Edit Recipe' : 'New Recipe' }}</h3>
 
-        <button type="button" class="me-2" mat-stroked-button color="warn" (click)="cancel()">
-          Cancel
-        </button>
+  <mat-form-field appearance="outline">
+    <mat-label>Recipe Name</mat-label>
+    <input matInput formControlName="name" required>
+  </mat-form-field>
 
-        <button type="button" mat-stroked-button color="primary" (click)="save()">
-          {{ isEditMode ? 'Save' : 'Create' }}
-        </button>
+  <mat-form-field appearance="outline">
+    <mat-label>Description</mat-label>
+    <textarea matInput formControlName="description"></textarea>
+  </mat-form-field>
 
-      </div>
-      <div class="col-md-6 ">
-        <!-- right card header -->
-      </div>
+  <h4>Instructions</h4>
+  <div formArrayName="instructions">
+    <div *ngFor="let instruction of instructions.controls; let i = index" [formGroupName]="i">
+      <mat-form-field appearance="outline">
+        <mat-label>Step {{ i + 1 }}</mat-label>
+        <input matInput formControlName="text" required>
+      </mat-form-field>
+      <button mat-button color="warn" (click)="removeInstruction(i)">Remove</button>
     </div>
   </div>
-  <div class="card-body">
 
-    <form [formGroup]="formGroup">
+  <button mat-button color="primary" (click)="addInstruction()">Add Instruction</button>
 
-      <div class="row">
-        <div class="col-md-6 ">
-
-          <mat-form-field class="w-100" appearance="outline">
-            <mat-label>Name</mat-label>
-            <input matInput formControlName="name" placeholder="Enter recipe name">
-          </mat-form-field>
-
-          <mat-form-field class="w-100" appearance="outline">
-            <mat-label>Description</mat-label>
-            <textarea matInput formControlName="description" placeholder="Enter recipe description"></textarea>
-          </mat-form-field>
-
-        </div>
-        <div class="col-md-6 ">
-          <!-- right card body -->
-        </div>
-      </div>
-
-
-    </form>
-
+  <div>
+    <button mat-stroked-button (click)="cancel()">Cancel</button>
+    <button mat-flat-button color="primary" (click)="save()">Save</button>
   </div>
-</div>
-
-<!-- instructions -->
-<div class="card">
-  <div class="card-header">
-    <div class="row">
-      <div class="col-md-6 border">
-        Recipe Instructions
-      </div>
-      <div class="col-md-6 border text-end">
-        <button *ngIf="isEditMode" type="button" mat-stroked-button color="primary"
-          [routerLink]="['/instructions/create']" [queryParams]="{recipeId: id}">
-          Add Instruction
-        </button>
-      </div>
-    </div>
-  </div>
-  <div class="card-body">
-    <div class="row">
-      <div class="col-md-12 border">
-        <!-- instructions list goes here -->
-        <div *ngIf="recipe && recipe.instructions && recipe.instructions.length > 0; else noInstructions">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Order</th>
-                <th>Text</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let instruction of recipe.instructions">
-                <td>{{ instruction.order }}</td>
-                <td>{{ instruction.text }}</td>
-                <td>
-                  <button mat-stroked-button color="primary" [routerLink]="['/instructions/edit', instruction.id]">
-                    Edit
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <ng-template #noInstructions>
-          <div class="alert alert-info" *ngIf="isEditMode">
-            No instructions available. Add instructions to this recipe.
-          </div>
-          <div class="alert alert-info" *ngIf="!isEditMode">
-            Save the recipe first, then you can add instructions.
-          </div>
-        </ng-template>
-      </div>
-    </div>
-  </div>
-</div>
+</form>
