--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -1,15 +1,49 @@
 <form [formGroup]="formGroup">
-  <h3>{{ isEditMode ? 'Edit Recipe' : 'New Recipe' }}</h3>
+  <div class="card">
+    <div class="card-header">
+      <div class="row">
+        <div class="col-md-6 ">
 
-  <mat-form-field appearance="outline">
-    <mat-label>Recipe Name</mat-label>
-    <input matInput formControlName="name" required>
-  </mat-form-field>
+          <button type="button" class="me-2" mat-stroked-button color="warn" (click)="cancel()">
+            Cancel
+          </button>
 
-  <mat-form-field appearance="outline">
-    <mat-label>Description</mat-label>
-    <textarea matInput formControlName="description"></textarea>
-  </mat-form-field>
+          <button type="button" mat-stroked-button color="primary" (click)="save()">
+            {{ isEditMode ? 'Save' : 'Create' }}
+          </button>
+
+        </div>
+        <div class="col-md-6 ">
+          <!-- right card header -->
+        </div>
+      </div>
+    </div>
+    <div class="card-body">
+
+
+
+      <div class="row">
+        <div class="col-md-6 ">
+
+          <mat-form-field class="w-100" appearance="outline">
+            <mat-label>Name</mat-label>
+            <input matInput formControlName="name" placeholder="Enter recipe name">
+          </mat-form-field>
+
+          <mat-form-field class="w-100" appearance="outline">
+            <mat-label>Description</mat-label>
+            <textarea matInput formControlName="description" placeholder="Enter recipe description"></textarea>
+          </mat-form-field>
+
+        </div>
+        <div class="col-md-6 ">
+          <!-- right card body -->
+        </div>
+      </div>
+
+
+    </div>
+  </div>
 
   <h4>Instructions</h4>
   <div formArrayName="instructions">
