--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -67,12 +67,22 @@
         <div class="col-md-12 border">
           <!-- instructions card body -->
           <div formArrayName="instructions">
-            <div *ngFor="let instruction of instructions.controls; let i = index" [formGroupName]="i">
-              <mat-form-field appearance="outline">
-                <mat-label>Step {{ i + 1 }}</mat-label>
+            <div *ngFor="let instruction of instructions.controls; let i = index" [formGroupName]="i"
+              class="d-flex align-items-center mb-2">
+              <!-- Step number input field -->
+              <mat-form-field appearance="outline" style="width: 100px; margin-right: 10px;">
+                <mat-label>Step #</mat-label>
+                <input matInput type="number" min="1" formControlName="order">
+              </mat-form-field>
+
+              <!-- Instruction text input field -->
+              <mat-form-field appearance="outline" style="flex-grow: 1;">
+                <mat-label>Instruction</mat-label>
                 <input matInput formControlName="text" required>
               </mat-form-field>
-              <button type="button" class="me-2" mat-stroked-button color="warn" (click)="removeInstruction(i)">
+
+              <!-- Remove button -->
+              <button type="button" class="ms-2" mat-stroked-button color="warn" (click)="removeInstruction(i)">
                 Remove
               </button>
             </div>
