Crud recipe component file is HTML enhanced using some paddings and bootstrap classes and margins

--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -46,15 +46,14 @@
       </div>
     </div>
   </div>
-  <hr>
 
-  <div class="card">
+  <div class="card my-3">
     <div class="card-header">
       <div class="row">
-        <div class="col-md-6 border">
+        <div class="col-md-6 lead">
           Instructions
         </div>
-        <div class="col-md-6 border text-end">
+        <div class="col-md-6 text-end">
           <!-- Button removed from here -->
         </div>
       </div>
@@ -103,3 +102,4 @@
     </div>
   </div>
 </form>
+<div class="pb-3"></div>
