Mix the entire the section item dragable and assorted list

--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.scss
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.scss
@@ -8,6 +8,7 @@
   padding: 10px;
   background: white;
   margin-bottom: 10px;
+  cursor: move; // Add cursor: move to the entire item
 
   &:hover {
     background: #fafafa;
@@ -15,15 +16,9 @@
   }
 }
 
-.drag-handle {
-  cursor: move;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  color: #666;
-}
+// You can remove the .drag-handle class since we're not using it anymore
 
+// Keep these classes as they are - they control the visual feedback during drag operations
 .cdk-drag-preview {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
     0 3px 14px 2px rgba(0, 0, 0, 0.12);
