--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -91,8 +91,8 @@
                   </mat-form-field>
                 </div>
                 <div class="col-md-2">
-                  <button type="button" mat-stroked-button color="warn" (click)="removeInstruction(i)">
-                    <mat-icon>delete_outline</mat-icon> Remove
+                  <button type="button" mat-icon-button color="warn" (click)="removeInstruction(i)">
+                    <mat-icon>delete_outline</mat-icon>
                   </button>
                 </div>
               </div>
