--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -52,8 +52,8 @@
       <div class="row">
         <div class="col-md-4 d-flex align-items-center">
           <button type="button" mat-stroked-button [color]="isDragEnabled ? 'accent' : 'basic'"
-            (click)="toggleDragDrop()">
-            <mat-icon>{{ isDragEnabled ? 'low_priority' : 'reorder' }}</mat-icon>
+            (click)="toggleDragDrop()" class="fa-button">
+            <i class="fas" [ngClass]="isDragEnabled ? 'fa-sort-amount-down' : 'fa-bars'"></i>
             {{ isDragEnabled ? 'Disable Sorting' : 'Enable Sorting' }}
           </button>
         </div>
