Renames to instructionsFormArray so that the code is less ambiguous and the crud recipe component

--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -68,7 +68,7 @@
         <div formArrayName="instructions">
           <div cdkDropList [cdkDropListSortingDisabled]="!isDragEnabled" (cdkDropListDropped)="drop($event)"
             class="instruction-list">
-            <div *ngFor="let instruction of instructions.controls; let i = index" [formGroupName]="i"
+            <div *ngFor="let instruction of instructionsFormArray.controls; let i = index" [formGroupName]="i"
               class="mb-3 instruction-item" [class.draggable-item]="isDragEnabled" cdkDrag>
               <div class="row align-items-center">
                 <!-- Add a drag indicator column that only shows when drag is enabled -->
